--- a/css/style.css
+++ b/css/style.css
@@ -61,15 +61,15 @@ z-index: -1; }
 }
 
 #brand {
-	font-size: 4em;
+	font-size: 5em;
     color:black;
 }
 .title-list li {
 	float:left;
 	padding-right: 12px;
 	list-style: none;
-	font-size: 1.32em;
-    color:black
+	font-size: 1.6em;
+    color:black;
 }
 section h2 {
 	font-size: 2.5em;
