--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ footer p {
 	margin: 0 auto;
 }
 #myCarousel:after {
-	content:"Зріст моделі 184см. На моделі розмір M.";
+	content:"Exciting drones.";
 	display:block;
 	text-align: center;
 	padding-top: 7px;
